docs: rename counter windows to intervals
